samples/_failures_safe/1761607791_d6ec5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f24ca3b1.c: In function ‘stack_push’:
./samples/SAFE/__tmp_f24ca3b1.c:177:5: error: expected declaration or statement at end of input
  177 |     if (stack->top >= MAX_NODES - 1) {
      |     ^~
./samples/SAFE/__tmp_f24ca3b1.c:177:5: error: expected declaration or statement at end of input
